@@ -19,6 +19,7 @@ sunuo (0.3.2) unstable; urgency=low
     - launch www.sunuo.org instead of www.runuo.com
     - disambiguate Math.Floor() call
     - fixed compiler warnings
+    - moved "Reports" engine into separate script library
   * upgraded log4net to 1.2.10
 
  --
